test :: 테스트 코드에 새 필드 반영
- ItemQueryServiceTest: 카테고리 및 검색 조건 관련 테스트 케이스 업데이트

Co-Authored-By: jaeminjo732 <jaeminjo732@gmail.com>