@@ -19,6 +19,7 @@ import org.springframework.data.domain.Sort;
 import org.springframework.test.util.ReflectionTestUtils;
 
 import java.time.LocalDateTime;
+import java.util.Arrays;
 import java.util.List;
 
 import static org.assertj.core.api.Assertions.assertThat;
@@ -43,26 +44,26 @@ class ItemQueryServiceTest {
     @Test
     void placeIds가_null_제외_후_IN_검색된다() {
         // given
-        List<Long> placeIds = List.of(1L, null, 2L);
+        List<Long> placeIds = Arrays.asList(1L, null, 2L);
         Item item = createItem(1L, Item.ItemStatus.LOST);
         ReflectionTestUtils.setField(item, "id", 10L);
 
-        Place place = mock(Place.class);
-        when(place.getId()).thenReturn(1L);
-        when(place.getPlace()).thenReturn("도서관");
+        Place place = new Place();
+        ReflectionTestUtils.setField(place, "id", 1L);
+        ReflectionTestUtils.setField(place, "place", "도서관");
         when(placeRepository.findAllById(any())).thenReturn(List.of(place));
 
-        when(itemRepository.searchItems(anyList(), eq(Item.ItemStatus.LOST), any(Pageable.class)))
+        when(itemRepository.searchItems(anyList(), eq(Item.ItemStatus.LOST), isNull(), isNull(), isNull(), any(Pageable.class)))
                 .thenReturn(new PageImpl<>(List.of(item), PageRequest.of(0, 5, Sort.by(Sort.Direction.DESC, "foundAt")), 1));
 
         // when
-        ItemSearchResponse response = itemQueryService.searchItems(placeIds, "LOST", 1, 5);
+        ItemSearchResponse response = itemQueryService.searchItems(placeIds, "LOST", null, null, null, 1, 5);
 
         // then
         ArgumentCaptor<List<Long>> placeIdsCaptor = ArgumentCaptor.forClass(List.class);
         ArgumentCaptor<Pageable> pageableCaptor = ArgumentCaptor.forClass(Pageable.class);
 
-        verify(itemRepository).searchItems(placeIdsCaptor.capture(), eq(Item.ItemStatus.LOST), pageableCaptor.capture());
+        verify(itemRepository).searchItems(placeIdsCaptor.capture(), eq(Item.ItemStatus.LOST), isNull(), isNull(), isNull(), pageableCaptor.capture());
 
         assertThat(placeIdsCaptor.getValue()).containsExactly(1L, 2L);
 
@@ -79,14 +80,14 @@ class ItemQueryServiceTest {
     @Test
     void placeIds_null이고_status_공백이면_필터_없이_검색된다() {
         // given
-        when(itemRepository.searchItems(isNull(), isNull(), any(Pageable.class)))
+        when(itemRepository.searchItems(isNull(), isNull(), isNull(), isNull(), isNull(), any(Pageable.class)))
                 .thenReturn(new PageImpl<>(List.of(), PageRequest.of(0, 10), 0));
 
         // when
-        ItemSearchResponse response = itemQueryService.searchItems(null, "   ", 1, 10);
+        ItemSearchResponse response = itemQueryService.searchItems(null, "   ", null, null, null, 1, 10);
 
         // then
-        verify(itemRepository).searchItems(isNull(), isNull(), any(Pageable.class));
+        verify(itemRepository).searchItems(isNull(), isNull(), isNull(), isNull(), isNull(), any(Pageable.class));
         verifyNoInteractions(placeRepository);
 
         assertThat(response.getContent()).isEmpty();
@@ -98,18 +99,18 @@ class ItemQueryServiceTest {
     void status_소문자도_ENUM으로_파싱된다() {
         // given
         Item item = createItem(1L, Item.ItemStatus.LOST);
-        when(itemRepository.searchItems(isNull(), eq(Item.ItemStatus.LOST), any(Pageable.class)))
+        when(itemRepository.searchItems(isNull(), eq(Item.ItemStatus.LOST), isNull(), isNull(), isNull(), any(Pageable.class)))
                 .thenReturn(new PageImpl<>(List.of(item), PageRequest.of(0, 10), 1));
-        Place place = mock(Place.class);
-        when(place.getId()).thenReturn(1L);
-        when(place.getPlace()).thenReturn("기숙사");
+        Place place = new Place();
+        ReflectionTestUtils.setField(place, "id", 1L);
+        ReflectionTestUtils.setField(place, "place", "기숙사");
         when(placeRepository.findAllById(any())).thenReturn(List.of(place));
 
         // when
-        itemQueryService.searchItems(null, "lost", 1, 10);
+        itemQueryService.searchItems(null, "lost", null, null, null, 1, 10);
 
         // then
-        verify(itemRepository).searchItems(isNull(), eq(Item.ItemStatus.LOST), any(Pageable.class));
+        verify(itemRepository).searchItems(isNull(), eq(Item.ItemStatus.LOST), isNull(), isNull(), isNull(), any(Pageable.class));
         verify(placeRepository).findAllById(any());
     }
 
@@ -118,16 +119,16 @@ class ItemQueryServiceTest {
         // given
         Item first = createItem(1L, Item.ItemStatus.LOST);
         Item second = createItem(1L, Item.ItemStatus.LOST);
-        when(itemRepository.searchItems(isNull(), isNull(), any(Pageable.class)))
+        when(itemRepository.searchItems(isNull(), isNull(), isNull(), isNull(), isNull(), any(Pageable.class)))
                 .thenReturn(new PageImpl<>(List.of(first, second), PageRequest.of(0, 10), 2));
 
-        Place place = mock(Place.class);
-        when(place.getId()).thenReturn(1L);
-        when(place.getPlace()).thenReturn("본관");
+        Place place = new Place();
+        ReflectionTestUtils.setField(place, "id", 1L);
+        ReflectionTestUtils.setField(place, "place", "본관");
         when(placeRepository.findAllById(any())).thenReturn(List.of(place));
 
         // when
-        itemQueryService.searchItems(null, null, 1, 10);
+        itemQueryService.searchItems(null, null, null, null, null, 1, 10);
 
         // then
         verify(placeRepository, times(1)).findAllById(any());
@@ -137,12 +138,12 @@ class ItemQueryServiceTest {
     void 장소_없으면_빈_문자열로_반환한다() {
         // given
         Item item = createItem(99L, Item.ItemStatus.LOST);
-        when(itemRepository.searchItems(isNull(), isNull(), any(Pageable.class)))
+        when(itemRepository.searchItems(isNull(), isNull(), isNull(), isNull(), isNull(), any(Pageable.class)))
                 .thenReturn(new PageImpl<>(List.of(item), PageRequest.of(0, 10), 1));
         when(placeRepository.findAllById(any())).thenReturn(List.of());
 
         // when
-        ItemSearchResponse response = itemQueryService.searchItems(null, null, 1, 10);
+        ItemSearchResponse response = itemQueryService.searchItems(null, null, null, null, null, 1, 10);
 
         // then
         assertThat(response.getContent()).hasSize(1);
@@ -172,8 +173,10 @@ class ItemQueryServiceTest {
                 .foundPlaceId(placeId)
                 .foundPlaceDetail("상세 위치")
                 .name("테스트 물품")
+                .reporterName("테스트 신고자")
                 .image("image.jpg")
                 .status(status)
+                .category(Item.ItemCategory.ETC)
                 .foundAt(LocalDateTime.now().minusDays(1))
                 .build();
     }
